--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -1,19 +1,25 @@
+{% extends 'base.html' %}
 
-            {% extends 'base.html' %}
+{% block content %}
+<div class="row justify-content-md-center">
+    <div class="col-md-7 col-lg-5">
+        <h2 class="join-message">Login</h2>
 
-            {% block content %}
-            <div class="row justify-content-md-center">
-                <div class="col-md-7 col-lg-5">
-                    <h2 class="join-message">Join MyDietTracker today!</h2>
-                
-                    <form action="/login" method="POST">
-                        {{ form.hidden_tag() }}
-            
-                       {{form.email.label}} {{form.email}} <br>
-                        {{form.password.label}} {{form.password}}
-            
-                        <button class="btn-primary">login</button>
-                    </form>
-                </div>
+        <form action="/login" method="POST">
+            {{ form.hidden_tag() }}
+
+            <div class="form-group">
+                {{ form.email.label(class="form-label") }}
+                {{ form.email(class="form-control", placeholder="Enter your email") }}
             </div>
-            {% endblock %}
+
+            <div class="form-group">
+                {{ form.password.label(class="form-label") }}
+                {{ form.password(class="form-control", placeholder="Enter your password") }}
+            </div>
+
+            <button class="btn btn-primary">Login</button>
+        </form>
+    </div>
+</div>
+{% endblock %}
