updated models to update the database schema to remove unneccessary table

--- a/templates/users/details.html
+++ b/templates/users/details.html
@@ -8,4 +8,8 @@
     <p> <b> Goal Weight:</b> {{user.goal_weight}}</p>
 </div>
 
+<form action="/add-food">
+    <button>Add Food</button>
+</form>
+
 {% endblock %}
