added some functionality to try to get the search function to work

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,5 +20,7 @@
         {% block content %}
         {% endblock %}
     </div>
+
+    <script src="diettracker.js" defer></script>
 </body>
 </html>
