--- a/templates/users/details.html
+++ b/templates/users/details.html
@@ -7,26 +7,45 @@
     </form>
 </div>
 
-
 <div class="col-md-8">
-    <p> <b> Name:</b> {{user.first_name}} {{user.last_name}} </p> 
-    <p> <b> Email:</b> {{user.email}}  </p>
-    <p> <b> Daily Calorie Goal:</b> {{user.daily_calorie_goal}} </p>
-    <p> <b> Goal Weight:</b> {{user.goal_weight}}</p>
+    <p><b>Name:</b> {{ user.first_name }} {{ user.last_name }}</p> 
+    <p><b>Email:</b> {{ user.email }}</p>
+    <p><b>Daily Calorie Goal:</b> {{ user.daily_calorie_goal }}</p>
+    <p><b>Goal Weight:</b> {{ user.goal_weight }}</p>
 </div>
 
-<form action="/users/{{user.id}}/add_food">
+<form action="/users/{{ user.id }}/add_food">
     <button>Add Food</button>
 </form>
 
 <div class="col-md-8">
-    <h2>Food Entries</h2>
-    <ul>
-        {% for item in user.food_items %}
-        <li>{{item.item_name}} - {{item.meal_type}} - {{item.calorie_total}} calories</li>
-        <a href="/{{user.id}}/{{item.id}}/delete"><i class="fa-solid fa-trash"></i></a>
-        {% endfor %}
+    <h2>Today's Food Entries</h2>
+    {% set meal_order = ['Breakfast', 'Lunch', 'Dinner', 'Other'] %}
+    
+    {% set meal_totals = {} %}
+    {% set overall_total = 0 %}
+    
+    {% for meal_type in meal_order %}
+        {% set _ = meal_totals.update({meal_type: meal_totals.get(meal_type, 0)}) %}
+        <h3>{{ meal_type }}</h3>
+        <ul>
+            {% for item in user.food_items %}
+                {% if item.meal_type == meal_type and item.date == today %}
+                {% set overall_total = overall_total + item.calorie_total %}
+                    <li>{{ item.item_name }} - {{ item.date }} - {{ item.calorie_total }} calories
+                        <a href="/{{ user.id }}/{{ item.id }}/delete"><i class="fa-solid fa-trash"></i></a>
+                    </li>
+                    {% set _ = meal_totals.update({meal_type: meal_totals[meal_type] + item.calorie_total}) %}
+                {% endif %}
+            {% endfor %}
+        </ul>
+        
+        <h5>Total Calories for {{ meal_type }}: {{ meal_totals[meal_type] }}</h5>
+    {% endfor %}
+<h3>Overall Total</h3>
+        <li>Total Calories: {{ overall_total }}</li>
     </ul>
 </div>
 
-{% endblock %}
+
+    {% endblock %}
