--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/">Profile</a>
                     </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/users/{{user.id}}/edit">Edit Profile</a>
+                        </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/users/{{user.id}}/add_food">Add Food</a>
                     </li>
@@ -40,6 +43,7 @@
                         <a class="nav-link" href="/logout">Logout</a>
                     </li>
                 </ul>
+
             </div>
             {% endif %}
         </div>
