fixed some of the functionality of the edit food template and route

--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -18,6 +18,9 @@
 
             <button class="btn-primary">Register</button>
         </form>
+
+    <br><br>
+    <p>Already a member? <a href="/login">Click here</a> to log in.</p>
     </div>
 </div>
 {% endblock %}
