--- a/templates/food/editfood.html
+++ b/templates/food/editfood.html
@@ -13,7 +13,7 @@
             <div class="form-group">
                 {% if field.name == 'item_name' %}
                 <div class="form-group">
-                    <input type="text" name="item_name" id="item_name" class="form-control" placeholder="Food Name">
+                    <input type="text" name="item_name" id="item_name" class="form-control" placeholder="Food Name" value="{{item.item_name}}">
                     <select id="food-dropdown" class="form-control" style="display: none;">
 ]
                     </select>
