added remaining calorie counter

--- a/templates/users/details.html
+++ b/templates/users/details.html
@@ -6,6 +6,7 @@
     <p><b>Name:</b> {{ user.first_name }} {{ user.last_name }}</p> 
     <p><b>Email:</b> {{ user.email }}</p>
     <p><b>Daily Calorie Goal:</b> {{ user.daily_calorie_goal }}</p>
+    <p><b>Remaining Calories:</b> <div id="remaining-calories"></div></p>
 </div>
 
 <hr>
