--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -1,26 +1,19 @@
 {% extends 'base.html' %}
-
 {% block content %}
 <div class="row justify-content-md-center">
     <div class="col-md-7 col-lg-5">
         <h2 class="join-message">Join MyDietTracker today!</h2>
-    
-        <form action="/register" method="POST">
+        <form method="POST" id="user_form">
             {{ form.hidden_tag() }}
-
             {% for field in form if field.widget.input_type != 'hidden' %}
-
                 {% for error in field.errors %}
-                <span class="text-danger">{{ error }}</span>
+                    <span class="text-danger">{{ error }}</span>
                 {% endfor %}
                 {{ field(placeholder=field.label.text, class="form-control") }}
             {% endfor %}
-
-            <button class="btn-primary">Register</button>
+            <button class="btn btn-primary btn-lg btn-block">Register</button>
         </form>
-
-    <br><br>
-    <p>Already a member? <a href="/login">Click here</a> to log in.</p>
+        <p>Already a member? <a href="/login">Click here</a> to log in.</p>
     </div>
 </div>
 {% endblock %}
